tests/bad/OverlappingModules.ml
module MSig = struct end
module MSig = struct end
